--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="promo">
         <div class="container">
+
             <header class="header">
 				<a href="#" class="header__logo">
                     <img src="icons/run-icon.png" alt="logo">
@@ -52,6 +53,28 @@
         </div>
     </div>
 
+<div class="advantages">
+    <div class="container">
+        <div class="title">НАШИ ПРЕИМУЩЕСТВА</div>
+        <div class="advantages__wrapper">
+            <div class="advantages__item">
+                <img class="advantages_icon" src="icons/cup.png" alt="">
+                    <div class="advantages__subtitle">Делимся опытом</div>
+                    <div class="advantages__descr">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+            </div>
+            <div class="advantages__item">
+                <img class="advantages_icon" src="icons/heart.png" alt="">
+                    <div class="advantages__subtitle">Заботимся о здоровье</div>
+                    <div class="advantages__descr">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+            </div>
+            <div class="advantages__item">
+                <img class="advantages_icon" src="icons/shoe.png" alt="">
+                    <div class="advantages__subtitle">Учим бегать</div>
+                    <div class="advantages__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="">I LOVE RUNNING</a>.</div>
+            </div>
+        </div>
+    </div>
+</div>
     
 </body>
 </html>
